--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "homepage": "",
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "classnames": "^2.3.1",
     "core-js": "^3.12.1",
