--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "point-of-view": "^4.14.0",
     "pug": "^3.0.2",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.1",
+    "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
