--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "fastify-static": "^4.0.1",
     "formik": "^2.2.9",
     "http-errors": "^1.8.0",
+    "i18next": "^20.3.5",
     "lodash": "^4.17.21",
     "pino-pretty": "^4.8.0",
     "point-of-view": "^4.14.0",
@@ -43,6 +44,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.11.4",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.7",
