--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "",
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.0",
+    "@rollbar/react": "^0.8.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "classnames": "^2.3.1",
@@ -48,6 +49,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.7",
+    "rollbar": "^2.24.0",
     "socket.io-client": "^4.1.3",
     "yup": "^0.32.9"
   },
@@ -75,11 +77,11 @@
     "postcss-loader": "^5.2.0",
     "postcss-preset-env": "^6.7.0",
     "sass-loader": "^11.1.0",
+    "source-map-loader": "^3.0.0",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2",
-    "husky": "^7.0.1"
+    "webpack-dev-server": "^3.11.2"
   }
 }
