--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "classnames": "^2.3.1",
     "core-js": "^3.12.1",
     "debug": "^4.3.1",
+    "dotenv": "^10.0.0",
     "fastify": "^3.15.1",
     "fastify-formbody": "^5.0.0",
     "fastify-jwt": "^2.4.0",
