--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "css-loader": "^5.2.4",
     "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-import-resolver-webpack": "^0.13.1",
     "eslint-plugin-functional": "^3.2.1",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -78,12 +79,12 @@
     "postcss-loader": "^5.2.0",
     "postcss-preset-env": "^6.7.0",
     "sass-loader": "^11.1.0",
+    "source-map-explorer": "^2.5.2",
     "source-map-loader": "^3.0.0",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2",
-    "source-map-explorer": "^2.5.2"
+    "webpack-dev-server": "^3.11.2"
   }
 }
