--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "classnames": "^2.3.1",
     "core-js": "^3.12.1",
     "debug": "^4.3.1",
-    "dotenv": "^10.0.0",
     "fastify": "^3.15.1",
     "fastify-formbody": "^5.0.0",
     "fastify-jwt": "^2.4.0",
@@ -64,6 +63,7 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.4",
+    "dotenv-webpack": "^7.0.3",
     "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-import-resolver-webpack": "^0.13.1",
